--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "",
+  "name": "pocketbytes",
   "private": true,
   "sideEffects": false,
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
+    "design-tokens": "style-dictionary build --config sd-config.json;",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
