--- a/.github/workflows/design-tokens.yaml
+++ b/.github/workflows/design-tokens.yaml
@@ -14,9 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Node Dependencies
-        run: npm install style-dictionary
+        run: npm install
       - name: Build Style Dictionary
-        run: npm run build
+        run: npm run design-tokens
       - name: Commit Generated Platform Deliverables
         id: "auto-commit-action"
         uses: stefanzweifel/git-auto-commit-action@v4
