--- a/.github/workflows/design-tokens.yaml
+++ b/.github/workflows/design-tokens.yaml
@@ -13,10 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Node Dependencies
-        run: npm install style-dictionary
       - name: Build Style Dictionary
-        run: npm run build
+        run: npm run design-tokens
       - name: Commit Generated Platform Deliverables
         id: "auto-commit-action"
         uses: stefanzweifel/git-auto-commit-action@v4
